FIx recipes list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <ol><li><a href="./recipes/lasagna.html">Lasagna</a></li></ol>
-  <ol><li><a href="./recipes/friedegg.html">Fried Egg</a></li></ol>
+  <ol><li><a href="./recipes/lasagna.html">Lasagna</a></li>
+  <li><a href="./recipes/friedegg.html">Fried Egg</a></li></ol>
 </body>
 </html>
